--- a/_data/var.yml
+++ b/_data/var.yml
@@ -1,4 +1,8 @@
-﻿phones: 
+﻿# В этом файле задаются переменные, 
+# в дальнейшем они используются в других страницах,
+# например так: {{ site.data.var.email }}
+
+phones: 
   - "+7(903)777-77-77"
   - "+7(916)499-30-60"
 
