--- a/_config.yml
+++ b/_config.yml
@@ -11,9 +11,19 @@ plugins:
   - jekyll-sitemap
   # - jekyll-seo-tag
 
+collections:
+  portfolio:
+    output: true
+    
+
 
 defaults:
 - scope:
     path: "" # an empty string here means all files in the project
   values:
     layout: "uni"
+- scope:
+    path: ""
+    type: "portfolio"
+  values:
+    layout: "portfolio"
