--- a/_data/var.yml
+++ b/_data/var.yml
@@ -15,7 +15,7 @@ mailing: 121309, Москва, Физкультурный проезд, 3 кор
 
 socials:
   - name: WhatsApp
-    val: _ [WhatsApp]({% https://api.whatsapp.com/send?phone=79037253156 %}){:target="blank"}
+    val: _+7(916)499-30-60
   - name: Skype
     val: _
   - name: Instagram
