--- a/_data/var.yml
+++ b/_data/var.yml
@@ -16,7 +16,7 @@ mailing: 121309, Москва, Физкультурный проезд, 3 кор
 socials:
   - name: WhatsApp
     val: "+7(903)725-31-56"
-    link:  "https://wa.me/%s"
+    link:  "https://wa.me/79037253156"
   - name: Skype
     val: _
   - name: Instagram
