--- a/_data/var.yml
+++ b/_data/var.yml
@@ -9,7 +9,7 @@ phones:
 email:
   - 
 
-address:  Москва, Большой Власьевский переулок, 14 (подъезд справа от арки)
+address:  Москва, Большой Власьевский переулок, 14
 
 mailing: 121309, Москва, Физкультурный проезд, 3 корп. 1, 37
 
