--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ defaults:
 - scope:
     path: "" # an empty string here means all files in the project
   values:
-    permalink: /:title/:slug/
+    permalink: /:name/:basename/:title/:slug/
     layout: "uni"
 
 # jekyll-seo-tag
