--- a/_config.yml
+++ b/_config.yml
@@ -14,8 +14,12 @@ plugins:
 collections:
   portfolio:
     output: true
-    layout: "portfolio"
+    layout: portfolio
     permalink: /portfolio/:title
+  v2:
+    output: true
+    layout: v2
+    permalink: /v2/:title
     
 
 
@@ -25,6 +29,11 @@ defaults:
   values:
     # permalink: /:name/:title/:slug/
     layout: "uni"
+- scope:
+    path: "v2" 
+  values:
+    # permalink: /:name/:title/:slug/
+    layout: "v2"
 
 # jekyll-seo-tag
 description: "Методы и средства оценки технического состояния механизмов, оборудования, конструкций и других технических объектов в труднодоступных местах, установление причин неисправностей, рекомендации по устранению их причин."
