--- a/_data/var.yml
+++ b/_data/var.yml
@@ -52,3 +52,13 @@ contacts:
   links:
     label: Мы на портале поставщиков
     icon: forward
+
+# когда ширины на главное меню не хватает, скрипт убирает пункты согласно приоритету
+menu_priority:
+  '0': -100  # home
+  '1':  100  # Высотное обследование
+  '2':  100  # Обеспечение доступа
+  '3':  100  # страховочные системы
+  '4':  150  # portfolio
+  '5':  -50  # info
+  '6':  200  # contacts
