--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ defaults:
 - scope:
     path: "" # an empty string here means all files in the project
   values:
-    permalink: /:slug/
+    permalink: /:title/:slug
     layout: "uni"
 - scope:
     path: "_v2" 
