--- a/_config.yml
+++ b/_config.yml
@@ -8,9 +8,9 @@ sass:
   style: compressed
   sourcemap: true
 
-plugins:
-  - jekyll-sitemap
-  - jekyll-seo-tag
+# plugins:
+#   - jekyll-sitemap
+#   - jekyll-seo-tag
 
 theme: ""
 permalink: /:title/:slug
