--- a/_config.yml
+++ b/_config.yml
@@ -8,9 +8,9 @@ sass:
   style: compressed
   sourcemap: true
 
-# plugins:
-#   - jekyll-sitemap
-#   - jekyll-seo-tag
+plugins:
+  - jekyll-sitemap
+  - jekyll-seo-tag
 
 theme: ""
 permalink: /:title/:slug
@@ -30,6 +30,7 @@ defaults:
 - scope:
     path: "" # an empty string here means all files in the project
   values:
+    permalink: /:basename/:title/:slug
     layout: "uni"
 - scope:
     path: "_v2" 
