--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ plugins:
   - jekyll-seo-tag
 
 theme: ""
-permalink: /:title/:slug
+
 
 
 collections:
@@ -30,7 +30,7 @@ defaults:
 - scope:
     path: "" # an empty string here means all files in the project
   values:
-    permalink: /:title
+    permalink: /:title/:name/:basename
     layout: "uni"
 - scope:
     path: "_v2" 
