--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ defaults:
 - scope:
     path: "" # an empty string here means all files in the project
   values:
-    permalink: /:title/:name/:basename
+    permalink: /:title/:name
     layout: "uni"
 - scope:
     path: "_v2" 
