--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ plugins:
   - jekyll-seo-tag
 
 theme: ""
-debugpagevars: true # показывает переменные в тексте страничек
+debugpagevars: false # показывает переменные в тексте страничек
 
 
 
