--- a/_data/var.yml
+++ b/_data/var.yml
@@ -14,7 +14,7 @@ contacts:
 
   address:
     label: Физ. адрес
-    val: Москва, Большой Власьевский переулок, 14
+    val: Москва
     link: https://yandex.ru/maps/-/CCQlrJX8cC
     icon: location
 
