--- a/_data/var.yml
+++ b/_data/var.yml
@@ -53,12 +53,11 @@ contacts:
     label: Мы на портале поставщиков
     icon: forward
 
-# когда ширины на главное меню не хватает, скрипт убирает пункты согласно приоритету
-menu_priority:
-  '0':  0  # home
-  '1': 10  # Высотное обследование
-  '2': 10  # Обеспечение доступа
-  '3': 10  # страховочные системы
-  '4': 15  # portfolio
-  '5':  5  # info
-  '6': 20  # contacts
+# menu_priority:
+#   '0':  0  # home
+#   '1': 10  # Высотное обследование
+#   '2': 10  # Обеспечение доступа
+#   '3': 10  # страховочные системы
+#   '4': 15  # portfolio
+#   '5':  5  # info
+#   '6': 20  # contacts
